--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "2.1",
   "manifest_version": 2,
   "description": "A range of modifications to Brightpearl which extend it's existing functionality. ",
-  "homepage_url": "http://www.tamperevident.com.au",
+  "homepage_url": "http://www.tamperevident.com.au/brightpearl-extension/",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
