--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
+"update_url": "https://clients2.google.com/service/update2/crx",
+
   "name": "Brightpearl Extension",
-  "version": "2.11",
+  "version": "2.12",
   "manifest_version": 2,
   "description": "A range of modifications to Brightpearl which extend it's existing functionality. ",
   "homepage_url": "http://www.tamperevident.com.au/brightpearl-extension/",
